@@ -1,6 +1,6 @@
 % File src/library/base/man/matrix.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2012 R Core Team
+% Copyright 1995-2013 R Core Team
 % Distributed under GPL 2 or later
 
 \name{matrix}
@@ -79,6 +79,11 @@ is.matrix(x)
   promotes the names (if any) of the vector to the rownames of the matrix.
 
   \code{is.matrix} is a \link{primitive} function.
+
+  The \code{print} method for a matrix gives a rectangular layout with
+  dimnames or indices.  For a list matrix, the entries of length not
+  one are printed in  the form \samp{integer,7} indicating the type
+  and length.
 }
 \note{
   If you just want to convert a vector to a matrix, something like
