@@ -4997,7 +4997,7 @@ function(package, dir, lib.loc = NULL)
     common_names <- c("pkg", "pkgName", "package", "pos")
 
     bad_exprs <- character()
-    bad_imports <- all_imports <- imp3 <- imp3f <- character()
+    bad_imports <- all_imports <- imp2 <- imp2f <- imp3 <- imp3f <- character()
     bad_deps <- character()
     uses_methods <- FALSE
     find_bad_exprs <- function(e) {
@@ -5035,6 +5035,10 @@ function(package, dir, lib.loc = NULL)
                 all_imports <<- c(all_imports, pkg)
                 if(! pkg %in% imports)
                     bad_imports <<- c(bad_imports, pkg)
+                else {
+                    imp2 <<- c(imp2, pkg)
+                    imp2f <<- c(imp2f, deparse(e[[3L]]))
+                }
             } else if(Call %in% ":::") {
                 pkg <- deparse(e[[2L]])
                 all_imports <<- c(all_imports, pkg)
@@ -5107,6 +5111,35 @@ function(package, dir, lib.loc = NULL)
         if(uses_methods && !"methods" %in% c(depends, imports))
             gettext("package 'methods' is used but not declared")
         else ""
+
+    imp2un <- character()
+    if(length(imp2)) { ## Try to check these are exported
+        names(imp2f) <- imp2
+        imp2 <- unique(imp2)
+        imps <- split(imp2f, names(imp2f))
+        for (p in names(imps)) {
+            this <- imps[[p]]
+            if (p %in% "base") {
+                this <- setdiff(this, ls(baseenv(), all.names = TRUE))
+                imp2un <- c(imp2un, paste(p, this, sep = "::"))
+                next
+            }
+            ns <- .getNamespace(p)
+            value <- if(is.null(ns)) {
+                ## this could be noisy
+                tryCatch(suppressWarnings(loadNamespace(p)),
+                         error = function(e) e)
+            } else NULL
+            if (inherits(value, "error")) {
+            } else {
+                exps <- ls(envir = getNamespaceInfo(p, "exports"),
+                           all.names = TRUE)
+                this2 <- setdiff(this, exps)
+                imp2un <- c(imp2un, paste(p, this2, sep = "::"))
+            }
+        }
+    }
+
     names(imp3f) <- imp3
     imp3 <- unique(imp3)
     imp3self <- pkg_name %in% imp3
@@ -5125,11 +5158,11 @@ function(package, dir, lib.loc = NULL)
         imp3 <- imp3[(maintainers != db["Maintainer"])]
         imp3f <- imp3f[names(imp3f) %in% imp3]
         imps <- split(imp3f, names(imp3f))
-        imp2 <- imp3 <- imp3f <- unknown <- character()
+        imp32 <- imp3 <- imp3f <- imp3ff <- unknown <- character()
         for (p in names(imps)) {
             this <- imps[[p]]
             if (p %in% "base") {
-                imp2 <- c(imp2, paste(p, this, sep = ":::"))
+                imp32 <- c(imp32, paste(p, this, sep = ":::"))
                 next
             }
             ns <- .getNamespace(p)
@@ -5141,25 +5174,33 @@ function(package, dir, lib.loc = NULL)
             if (inherits(value, "error")) {
                 unknown <- c(unknown, p)
             } else {
-                exps <- ls(envir = getNamespaceInfo(p, "exports"),
-                           all.names = TRUE)
-                this2 <- this %in% exps
-                if (any(this2))
-                    imp2 <- c(imp2, paste(p, this[this2], sep = ":::"))
-                if (any(!this2)) {
-                    imp3 <- c(imp3, p)
-                    imp3f <- c(imp3f, paste(p, this[!this2], sep = ":::"))
-                }
+                 exps <- ls(envir = getNamespaceInfo(p, "exports"),
+                            all.names = TRUE)
+                 this2 <- this %in% exps
+                 if (any(this2))
+                     imp32 <- c(imp32, paste(p, this[this2], sep = ":::"))
+                 if (any(!this2)) {
+                     imp3 <- c(imp3, p)
+                     this <- this[!this2]
+                     pp <- ls(envir = asNamespace(p), all.names = TRUE)
+                     this2 <- this %in% pp
+                     if(any(this2))
+                         imp3f <- c(imp3f, paste(p, this[this2], sep = ":::"))
+                     if(any(!this2))
+                         imp3ff <- c(imp3ff, paste(p, this[!this2], sep = ":::"))
+                 }
             }
         }
-    } else imp2 <- unknown <- character()
+    } else imp32 <- imp3ff <- unknown <- character()
     res <- list(others = unique(bad_exprs),
                 imports = unique(bad_imports),
                 in_depends = unique(bad_deps),
                 unused_imports = bad_imp,
                 depends_not_import = depends_not_import,
-                imp2 = sort(unique(imp2)),
+                imp2un = sort(unique(imp2un)),
+                imp32 = sort(unique(imp32)),
                 imp3 = imp3, imp3f = sort(unique(imp3f)),
+                imp3ff = sort(unique(imp3ff)),
                 imp3self = imp3self,
                 imp3selfcalls = sort(unique(imp3selfcalls)),
                 imp3unknown = unknown,
@@ -5224,7 +5265,15 @@ function(x, ...)
                          sQuote(xx)), msg)
           }
       },
-      if(length(xx <- x$imp2)) { ## ' ' seems to get converted to dir quotes
+      if(length(xx <- x$imp2un)) {
+          if(length(xx) > 1L) {
+              c(gettext("Missing or unexported objects:"),
+                .pretty_format(sort(xx)))
+          } else {
+              gettextf("Missing or unexported object: %s", sQuote(xx))
+          }
+      },
+      if(length(xx <- x$imp32)) { ## ' ' seems to get converted to dir quotes
           msg <- "See the note in ?`:::` about the use of this operator."
           msg <- strwrap(paste(msg, collapse = " "), indent = 2L, exdent = 2L)
           if(length(xx) > 1L) {
@@ -5235,6 +5284,15 @@ function(x, ...)
                          sQuote(xx)), msg)
           }
       },
+      if(length(xx <- x$imp3ff)) {
+           if(length(xx) > 1L) {
+              c(gettext("Missing objects imported by ':::' calls:"),
+                .pretty_format(sort(xx)))
+          } else {
+              gettextf("Missing object imported by a ':::' call: %s",
+                       sQuote(xx))
+          }
+     },
       if(length(xx <- x$imp3)) { ## ' ' seems to get converted to dir quotes
           xxx <- x$imp3f
           msg <- "See the note in ?`:::` about the use of this operator."
@@ -5249,8 +5307,8 @@ function(x, ...)
           if(length(xxx) > 1L) {
               c(gettext("Unexported objects imported by ':::' calls:"),
                 .pretty_format(sort(xxx)), msg)
-          } else {
-              c(gettextf("Unexported objects imported by a ':::' call: %s",
+          } else  if(length(xxx)) {
+              c(gettextf("Unexported object imported by a ':::' call: %s",
                          sQuote(xxx)), msg)
           }
       },
